Added API: Get single workflow result + Bugfix (#71)
* Added API: Get single workflow result

* Add assert for id field.

* Fix bug for no storage file.

* Bug fix.
